--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: testthatmulti
 Type: Package
-Title: Testing for R Packages With Multiple Attempts for Noisy Tests
+Title: Testing for R Packages with Multiple Attempts for Noisy Tests
 Version: 0.1.0
 Author: Collin Erickson
 Maintainer: Collin Erickson <collinberickson@gmail.com>
