--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Testing for R Packages with Multiple Attempts for Noisy Tests
 Version: 0.1.0
 Author: Collin Erickson
 Maintainer: Collin Erickson <collinberickson@gmail.com>
-Description: Runs tests using the `testthat` package but allows for multiple
+Description: Runs tests using the 'testthat' package but allows for multiple
     attempts for a single test. This is useful for noisy or flaky tests
     that generally pass but can fail due to occasional random errors,
     such as numeric instability or using random data.
