--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,5 @@ export(ttm_expect_equal)
 export(ttm_expect_error)
 export(ttm_expect_no_error)
 export(ttm_expect_true)
+export(ttm_i)
+export(ttm_n)
